2006-10-12  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Added checks for Interactive Ruby.

	* acinclude.m4: Added AM_CHECK_RUBY_IRB. Eliminated warnings about
	"underquoted definition".

2006-08-21  Scott Lembcke <slembcke@cvs.gnome.org>

        * Updated the INSTALL file with Kevins suggestions.

2006-08-21  Scott Lembcke <slembcke@cvs.gnome.org>

        * Added an INSTALL file.

2006-08-21  Scott Lembcke <slembcke@cvs.gnome.org>

        * gimp-ruby/gimp_oo_image.rb: Changed the name of
          Gimp::Image.undo_group to Gimp::Image.undo_group_start for
          consistency.

2006-08-19  Scott Lembcke <slembcke@cvs.gnome.org>

        * plug-ins/*.rb: Changed all single quotes to double quotes.
        
        * ext/rbgimpdialog.c: Added an exception when using non
          dialog-friendly types.

2006-08-19  Scott Lembcke <slembcke@cvs.gnome.org>

        * ChangeLog: Fixed my email address.
        
        * ext/: Merged ids.c and structures.c into definitions.c. Removed
          rbgimpcolorcmyk.c and rbgimpcolorhsv.c. 
        
        * ext/Makefile.am: Changes to reflect changes in ext/. Disabled
          rbgimpcolorspace.c.
          
        * ext/conversion.c: Removed conversions for the Gimp::HSV and
          Gimp::CMYK classes.
          
        * ext/rbgimp.*: Minor formating changes. Removed init functions for
          removed/disabled modules.
          
        * ext/rbgimpconstants.c: Moved the line that defines the 
          Gimp::EnumNames module outside the loop. Removed the check for the
          "GIMP_" prefix. Added directory constants.
          
        * ext/rbgimpdialog.c: Removed the nothing() function. In
          handle_string_types() removed the 'data' variable and replaced it
          with NULL. Removed gettext() calls as it can now be called
          dynamically from Ruby.
          
        * Changed the way that rb_gimp_main() is used so that plugins that