@@ -1,5 +1,9 @@
 2006-10-12  Kevin Cozens  <kcozens@cvs.gnome.org>
 
+	* acinclude.m4 (AM_CHECK_RUBY_IRB): Fixes display of test results.
+
+2006-10-12  Kevin Cozens  <kcozens@cvs.gnome.org>
+
 	* configure.in: Added checks for Interactive Ruby.
 
 	* acinclude.m4: Added AM_CHECK_RUBY_IRB. Eliminated warnings about
